--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/auth0-lock": "^10.10.1",
+    "angular2-jwt": "^0.2.0",
+    "auth0-lock": "^10.14.0",
+    "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
+    "mongojs": "^2.4.0",
+    "ng2-slim-loading-bar": "^4.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
